# 0.022
# [Login] GET login API correctly fetching data. Not authenticating or passing data through to Homepage.
# NavBar elements Hidden until user logs in 

# 0.021
# [Users] Fetching and displaying correct data from db. Displays data for all users.
# GET users API ✅
# [Users] -> [User] Displaying correct data

# 0.020 
# stable version
# [Navbar] Admin template established
# Inserted more data into db to test front end
# Added sponsor watermark placeholders

# 0.019
# API changes.
# [ListSessions] {session_id}-> [Session]
# [Session] Displaying correct data from DB! ^_^ 
# Code cleanup
# UX/UI updated 

# 0.018
# API changes, stable version
# [Session] init to replace [Session_Info], but not receiving data correctly.
# Session_Info has demo of session fetching API.
# Testing passing data through React Routes

# 0.017
# [Sessions] Linking to Session page, data not displaying correctly yet.
# Questionable Attempt at fetching subsession data

# 0.016
# [Home] Added scrolling background animation to landing page.

# 0.015
# API changes.
# [ListSessions] Dispaying response from API on front end

# 0.014
# React running
# [ListSessions] fetches Session data and is returned in console.

# 0.013
# Installed Node on server. Configuring Routing. API Folder hidden

# 0.012
# Stable version before introducing React

# 0.011
# Server file structure changes 

# 0.010
# [Profile] Page added. Pulls data directly
# {Profile} Link established. Needs full implementation
# {Functions} _getCurrentTime() updated, userProfile() to link {Profile}
# [Style]


# 0.009
# [Presenter] bug fix
# [Presenters] Finds all the files associated with the subession, allowing user to download them
# [Header/Navi] Updated

# 0.008
# [Moderator] Session link established
# (Fetches session title and subsession data)
# Utility functions expanded
# [Session] title properly being displayed in Session view

# 0.007 
# branch for big commits pog

# 0.006